# nerfview

./: pyproject.toml
examples/: 00_dummy_rendering.py
nerfview/: __init__.py  _renderer.py  viewer.py
