[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nerfview"
version = "0.0.3"
description = "Interactive NeRF rendering web viewer"
readme = "README.md"
license = { text = "MIT" }

dependencies = ["viser>=0.2.1", 
"jaxtyping>=0.2.15"]

[project.optional-dependencies]
dev = ["black", "isort", "ipdb"]

examples = [
    "numpy",
    "pillow",
    "scooby",
    "pooch",
    "imageio",
    "matplotlib",
    #"pyvista --no-deps",
    #"--extra-index-url https://wheels.vtk.org vtk-egl"
] 



[tool.setuptools.packages.find]
include = ["nerfview"]

[tool.isort]
profile = "black"
